force-app/main/default/objects/Line_of_Credit_Transaction_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>