force-app/main/default/objects/Line_of_Credit_Transaction_Line__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>Line_of_Credit_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Transaction_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>