force-app/main/default/objects/Line_of_Credit_Transaction_Line__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>